# app_toggles

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  cicd.yaml
app_toggles/: __init__.py  _exceptions.py  _toggles.py  _types.py
app_toggles/_toggle_providers/: __init__.py  json_toggle_provider.py  provider.py
tests/: _toggles_unit_test.py
tests/toggle_providers/: json_toggle_provider_unit_test.py
