[tool.poetry]
name = "app-toggles"
version = "0.1.1"
description = "A library to manage app toggles"
authors = ["Gustavo Eguez <eguezgustavo@gmail.com>"]
readme = "README.md"
packages = [{include = "app_toggles"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
